grammar.js
    source_file: $ => repeat($.ModuleDefinition),

    lowercased_identifier: $ => /[a-z][a-zA-Z0-9]*(-[a-zA-Z0-9]+)*/,

    modulereference: $ => /[A-Z][a-zA-Z0-9]*(-[a-zA-Z0-9]+)*/,
    number: $ => choice(
      '0',
      /[1-9][0-9]*/,
    ),
    
    block_comment: $ => seq(
      '/*',
      repeat(choice(
        /[^*/]+/,       // non-* and non-/ characters
        seq('*', /[^/]/), // a '*' not followed by '/'
        seq('/', /[^*]/), // a '/' not followed by '*'
      )),
      '*/'
    ),

    // NOTE: In the strict spec, '--' also terminates a comment mid-line,
    // but virtually no real-world ASN.1 relies on that. The '-- to EOL'
    // behavior matches practical usage and other ASN.1 tools.
    line_comment: $ => token(seq('--', /[^\n]*/)),

    identifier: $ => /[a-zA-Z][a-zA-Z0-9]*(-[a-zA-Z0-9]+)*/,
